# imp-lesion-evidence-demo

./: .gitattributes  .gitignore  CITATION.cff  CONTINUE.md  DEMO_DEPLOYMENT_GUIDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
.superpowers/sdd/: completion-task1-report.md
configs/: default.yaml  isic2018_2016_2017nl_segformer_mitb3_384.yaml  isic2018_2016_2017nl_segformer_mitb3_bdou_contrast_clahe_median_finetune_384.yaml  isic2018_2016_2017nl_segformer_mitb3_bdou_contrast_clahe_median_sog_p02_finetune_384.yaml  isic2018_2016_2017nl_segformer_mitb3_bdou_finetune_384.yaml  isic2018_2016_resnet34_edgeaux_boundary_384.yaml  isic2018_2016_segformer_mitb2_384.yaml  isic2018_resnet34_edgeaux_boundary_resume3_384.yaml  isic2018_resnet34_edgeaux_finetune_384.yaml  isic2018_resnet34_edgeaux_resume2_stable_384.yaml  isic2018_resnet34_edgeaux_resume_stable_384.yaml  isic2018_resnet34_recall.yaml  isic2018_resnet34_recall_384.yaml  isic2018_robust.yaml  isic2018_unetpp_lowcontrast.yaml
configs/demo/: loop206_live.yaml
configs/loop206/: l206_control_train_screen_pilot20.yaml
demo/: README.md  model_registry.example.json
demo/data/: evidence_registry.json
docs/: data-card.md  model-card.md  reproducibility.md
docs/presentation/: 2026-07-23-professor-p-fast-lane-audit.md  defense-presentation-script-vi.md  defense-question-bank.md  lecturer-questions-and-answers-vi.md  presenter-s-transcript.md  (+1 more)
outputs/: imp-lesion-evidence-defense-manifest.json  imp-lesion-evidence-defense.html  imp-lesion-evidence-defense.pptx
release/: imp_release_manifest.json
scripts/: bootstrap_windows.ps1
(+165 files in other folders)
